# calorie-counter-backend

./: CMakeLists.txt  Dockerfile  README.md  build.sh  build_Ut.sh  build_all.sh  build_and_run_ut.sh  docker-compose.yml  run.sh
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/api/: Server.cpp  Server.hpp
src/clients/: OpenFoodFactsClient.cpp  OpenFoodFactsClient.hpp
src/models/: DTOs.hpp  daily_log.cpp  daily_log.hpp  food.cpp  food.hpp  meal_log.cpp  meal_log.hpp  nutrient.cpp  nutrient.hpp
src/services/: AuthService.hpp  FoodService.cpp  FoodService.hpp  MealService.cpp  MealService.hpp  UserService.hpp
src/storage/: FoodRepository.hpp  JsonFoodRepository.cpp  JsonFoodRepository.hpp  JsonMealRepository.cpp  JsonMealRepository.hpp  MealRepository.hpp  SqliteFoodRepository.cpp  SqliteFoodRepository.hpp
src/temp/: math.cpp  math.hpp
src/utils/: HttpClient.cpp  HttpClient.hpp  Json_utils.cpp  Json_utils.hpp  Result.cpp  Result.hpp  common_functions.cpp  common_functions.hpp  date_time_utils.hpp
tests/: CMakeLists.txt  requirements.txt  test_JsonMealRepository.cpp  test_mock.cpp  test_param.cpp
tests/test_api/: conftest.py  server.err  test_api.cpp  test_server_api.py
tests/test_clients/: test_OpenFoodFactsClient.cpp
tests/test_models/: test_daily_log.cpp  test_food.cpp  test_meal_model.cpp  test_nutrient.cpp
tests/test_server/: test_food_service.cpp
tests/test_service/: test_food_service.cpp  test_meal_log_service.cpp
tests/test_storage/: test_JsonFoodRepository.cpp  test_JsonMealRepository.cpp
